--- a/episodic-shows/build.gradle
+++ b/episodic-shows/build.gradle
@@ -11,6 +11,10 @@ buildscript {
 	}
 }
 
+plugins {
+    id "org.flywaydb.flyway" version "4.2.0"
+}
+
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
@@ -25,6 +29,9 @@ repositories {
 
 
 dependencies {
+
+    compile("org.flywaydb:flyway-core:4.2.0")
+
 	compile('org.springframework.boot:spring-boot-starter-actuator')
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('org.springframework.boot:spring-boot-starter-security')
