--- a/episodic-shows/build.gradle
+++ b/episodic-shows/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 
     compile("org.flywaydb:flyway-core:4.2.0")
 
+	compile('com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.0.pr3')
 	compile('org.springframework.boot:spring-boot-starter-actuator')
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('org.springframework.boot:spring-boot-starter-security')
