--- a/episodic-events/build.gradle
+++ b/episodic-events/build.gradle
@@ -24,8 +24,15 @@ repositories {
 	maven { url "http://repo.spring.io/snapshot" }
 }
 
+ext {
+	springCloudServicesVersion = '1.3.1.RELEASE'
+	springCloudVersion = 'Dalston.RELEASE'
+}
+
 
 dependencies {
+	compile('io.pivotal.spring.cloud:spring-cloud-services-starter-service-registry')
+
 	compile("org.springframework.amqp:spring-rabbit-junit:1.7.2.RELEASE")
 	compile("org.springframework.boot:spring-boot-starter-amqp")
 	compile('org.springframework.boot:spring-boot-starter-hateoas')
@@ -37,4 +44,11 @@ dependencies {
 	runtime('org.springframework.boot:spring-boot-devtools')
 	compileOnly('org.projectlombok:lombok')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+}
+
+dependencyManagement {
+	imports {
+		mavenBom "io.pivotal.spring.cloud:spring-cloud-services-dependencies:${springCloudServicesVersion}"
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+	}
 }
