--- a/episodic-shows/build.gradle
+++ b/episodic-shows/build.gradle
@@ -27,6 +27,11 @@ repositories {
 	maven { url "http://repo.spring.io/snapshot" }
 }
 
+ext {
+	springCloudServicesVersion = '1.3.1.RELEASE'
+	springCloudVersion = 'Dalston.RELEASE'
+}
+
 
 dependencies {
 	compile("org.springframework.amqp:spring-rabbit-junit:1.7.2.RELEASE")
@@ -35,6 +40,7 @@ dependencies {
     compile("org.flywaydb:flyway-core:4.2.0")
 
 	compile('org.springframework.boot:spring-boot-starter-hateoas')
+	compile('io.pivotal.spring.cloud:spring-cloud-services-starter-service-registry')
 
 	compile('com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.0.pr3')
 	compile('org.springframework.boot:spring-boot-starter-actuator')
@@ -45,4 +51,11 @@ dependencies {
 	runtime('mysql:mysql-connector-java')
 	compileOnly('org.projectlombok:lombok')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+}
+
+dependencyManagement {
+	imports {
+		mavenBom "io.pivotal.spring.cloud:spring-cloud-services-dependencies:${springCloudServicesVersion}"
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+	}
 }
