--- a/episodic-events/build.gradle
+++ b/episodic-events/build.gradle
@@ -32,6 +32,7 @@ ext {
 
 dependencies {
 	compile('io.pivotal.spring.cloud:spring-cloud-services-starter-service-registry')
+	compile('io.pivotal.spring.cloud:spring-cloud-services-starter-config-client')
 
 	compile("org.springframework.amqp:spring-rabbit-junit:1.7.2.RELEASE")
 	compile("org.springframework.boot:spring-boot-starter-amqp")
