--- a/episodic-gateway/build.gradle
+++ b/episodic-gateway/build.gradle
@@ -4,15 +4,12 @@ buildscript {
 	}
 	repositories {
 		mavenCentral()
-        maven { url "http://repo.spring.io/snapshot" }
+		maven { url "http://repo.spring.io/snapshot" }
+
 	}
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
 	}
-}
-
-plugins {
-    id "org.flywaydb.flyway" version "4.2.0"
 }
 
 apply plugin: 'java'
@@ -25,32 +22,23 @@ sourceCompatibility = 1.8
 repositories {
 	mavenCentral()
 	maven { url "http://repo.spring.io/snapshot" }
+
 }
 
+
 ext {
-	springCloudServicesVersion = '1.3.1.RELEASE'
+	springCloudServicesVersion = '1.4.1.RELEASE'
 	springCloudVersion = 'Dalston.RELEASE'
 }
 
-
 dependencies {
-	compile("org.springframework.amqp:spring-rabbit-junit:1.7.2.RELEASE")
-	compile("org.springframework.boot:spring-boot-starter-amqp")
-	compile('io.pivotal.spring.cloud:spring-cloud-services-starter-config-client')
-
-	compile("org.flywaydb:flyway-core:4.2.0")
-
-	compile('org.springframework.boot:spring-boot-starter-hateoas')
-	compile('io.pivotal.spring.cloud:spring-cloud-services-starter-service-registry')
-
-	compile('com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.0.pr3')
 	compile('org.springframework.boot:spring-boot-starter-actuator')
-	compile('org.springframework.boot:spring-boot-starter-data-jpa')
+	compile('org.springframework.cloud:spring-cloud-starter-zuul')
+	compile('io.pivotal.spring.cloud:spring-cloud-services-starter-config-client')
+	compile('io.pivotal.spring.cloud:spring-cloud-services-starter-service-registry')
 	compile('org.springframework.boot:spring-boot-starter-security')
 	compile('org.springframework.boot:spring-boot-starter-web')
 	runtime('org.springframework.boot:spring-boot-devtools')
-	runtime('mysql:mysql-connector-java')
-	compileOnly('org.projectlombok:lombok')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
