--- a/episodic-shows/build.gradle
+++ b/episodic-shows/build.gradle
@@ -34,8 +34,8 @@ ext {
 
 
 dependencies {
-	compile("org.springframework.amqp:spring-rabbit-junit:1.7.2.RELEASE")
-	compile("org.springframework.boot:spring-boot-starter-amqp")
+
+	compile("org.springframework.boot:spring-boot-starter-amqp:1.5.2.RELEASE")
 	compile('io.pivotal.spring.cloud:spring-cloud-services-starter-config-client')
 
 	compile("org.flywaydb:flyway-core:4.2.0")
